--- a/docs/storage-drivers/s3.md
+++ b/docs/storage-drivers/s3.md
@@ -1,8 +1,11 @@
-<!--GITHUB
-page_title: S3 storage driver
-page_description: Explains how to use the S3 storage drivers
-page_keywords: registry, service, driver, images, storage, S3
-IGNORES-->
++++
+title = "S3 storage driver"
+description = "Explains how to use the S3 storage drivers"
+keywords = ["registry, service, driver, images, storage,  S3"]
+[menu.main]
+parent= "smn_registry" 
++++
+
 
 # S3 storage driver
 
